Fix horizontal scroll and whatsapp link not changing issues

--- a/assets/styles/_about.scss
+++ b/assets/styles/_about.scss
@@ -55,12 +55,51 @@
           border-radius: 4px;
         }
 
+        &.active {
+          cursor: grabbing;
+          .reel-item {
+            cursor: grabbing;
+          }
+        }
+
         .reel-item {
           flex-shrink: 0;
           height: 228px;
           width: 148px;
           overflow: hidden;
           border: 1px solid $border;
+          position: relative;
+          cursor: grab;
+          img {
+            pointer-events: none;
+          }
+          &:hover {
+            .filter {
+              transition-delay: 0.2s;
+              transition-duration: 0.4s;
+              z-index: 1;
+              opacity: 1;
+            }
+          }
+          .filter {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(2px);
+            opacity: 0;
+            z-index: -1;
+            transition: all 0.6s ease-in-out;
+            a {
+              width: 100%;
+              height: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
         }
       }
     }
@@ -181,7 +220,7 @@
           padding-right: 1.5rem;
           .reel-item {
             flex-shrink: 0;
-            width: 120px;
+            width: 120px !important;
             height: 186px;
           }
         }
