--- a/assets/styles/_modal.scss
+++ b/assets/styles/_modal.scss
@@ -13,10 +13,10 @@
   }
   &.spotify {
     background-color: #212121;
-    border: 2px solid #212121;
     box-shadow: 2px 15px 25px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
+    border-radius: 14px;
     width: 324px;
+    height: 360px;
     top: 40%;
     left: -9%;
     iframe {
